RTCEth/Import Declarations/Visual Basic/RTC4ethImport.bas


Declare Function get_driver_status Lib "RTC4ethDLL.DLL" () As Long
Declare Function get_net_dll_version Lib "RTC4ethDLL.DLL" () As Long
Declare Function acquire_rtc Lib "RTC4ethDLL.DLL" (ByVal card_no As Long) As Long
Declare Function release_rtc Lib "RTC4ethDLL.DLL" (ByVal card_no As Long) As Long
Declare Sub      select_rtc Lib "RTC4ethDLL.DLL" (ByVal card_no As Integer)
Declare Function assign_rtc Lib "RTC4ethDLL.DLL" (ByVal search_no As Integer, ByVal card_no As Integer) As Long
Declare Function assign_rtc_by_ip Lib "RTC4ethDLL.DLL" (ByVal ip As Long, ByVal card_no As Integer) As Long
Declare Sub      remove_rtc Lib "RTC4ethDLL.DLL" (ByVal card_no As Integer)
Declare Function convert_string_to_ip Lib "RTC4ethDLL.DLL" (ByVal ip As String) As Long
Declare Sub      convert_ip_to_string Lib "RTC4ethDLL.DLL" (ByVal ip As Long, ByVal cpip As String)
Declare Sub      convert_mac_to_string Lib "RTC4ethDLL.DLL" (ByVal mac As Currency, ByVal cpmac As String)
Declare Function rtc_search_cards Lib "RTC4ethDLL.DLL" (cards As Integer, ByVal ip As Long, ByVal netmask As Long) As Long
Declare Function get_mac_address Lib "RTC4ethDLL.DLL" (ByVal cardno As Integer) As Int64
Declare Function get_ip_address Lib "RTC4ethDLL.DLL" (ByVal cardno As Integer) As Long
Declare Function get_serial Lib "RTC4ethDLL.DLL" (ByVal cardno As Integer) As Long
Declare Function get_connection_status Lib "RTC4ethDLL.DLL" (ByVal cardno As Integer) As Integer
Declare Function get_master_ip_address Lib "RTC4ethDLL.DLL" (ByVal cardno As Integer) As Long
Declare Function get_master_id Lib "RTC4ethDLL.DLL" (ByVal cardno As Integer, ByVal id As String) As Long
Declare Function set_static_ip Lib "RTC4ethDLL.DLL" (ByVal ip As Long, ByVal netmask As Long, ByVal gateway As Long) As Long
Declare Function get_static_ip Lib "RTC4ethDLL.DLL" (ip As Long, netmask As Long, gateway As Long) As Long
Declare Function get_mcu_fw_version Lib "RTC4ethDLL.DLL" (ByVal cardno As Integer) As Long
Declare Function get_nic_ip_count Lib "RTC4ethDLL.DLL" (count As Integer) As Long
Declare Sub      get_nic_ip Lib "RTC4ethDLL.DLL" (ByVal count As Integer, ip As Long, nm As Long)
Declare Sub      n_get_waveform Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal channel As Integer, ByVal istop As Integer, ByVal memptr As pint)
Declare Sub      get_waveform Lib "RTC4ethDLL.DLL" (ByVal channel As Integer, ByVal istop As Integer, ByVal memptr As pint)
Declare Sub      n_measurement_status Lib "RTC4ethDLL.DLL" (ByVal n As Integer, busy As Integer, position As Integer)
Declare Sub      measurement_status Lib "RTC4ethDLL.DLL" (busy As Integer, position As Integer)
Declare Sub      n_set_trigger Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal sampleperiod As Integer, ByVal channel1 As Integer, ByVal channel2 As Integer)
Declare Sub      set_trigger Lib "RTC4ethDLL.DLL" (ByVal sampleperiod As Integer, ByVal signal1 As Integer, ByVal signal2 As Integer)
Declare Function n_get_value Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal signal As Integer) As Integer
Declare Function get_value Lib "RTC4ethDLL.DLL" (ByVal signal As Integer) As Integer
Declare Sub      n_set_io_bit Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mask1 As Integer)
Declare Sub      set_io_bit Lib "RTC4ethDLL.DLL" (ByVal mask1 As Integer)
Declare Sub      n_clear_io_bit Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mask0 As Integer)
Declare Sub      clear_io_bit Lib "RTC4ethDLL.DLL" (ByVal mask0 As Integer)
Declare Sub      n_move_to Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal position As Integer)
Declare Sub      move_to Lib "RTC4ethDLL.DLL" (ByVal position As Integer)
Declare Sub      n_control_command Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal head As Integer, ByVal axis As Integer, ByVal data As Integer)
Declare Sub      control_command Lib "RTC4ethDLL.DLL" (ByVal head As Integer, ByVal axis As Integer, ByVal data As Integer)
Declare Sub      n_arc_rel Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal angle As Double)
Declare Sub      arc_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Integer, ByVal dy As Integer, ByVal angle As Double)
Declare Sub      n_arc_abs Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer, ByVal angle As Double)
Declare Sub      arc_abs Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer, ByVal angle As Double)
Declare Sub      drilling Lib "RTC4ethDLL.DLL" (ByVal pulsewidth As Integer, ByVal relencoderdelay As Integer)
Declare Sub      regulation Lib "RTC4ethDLL.DLL" ()
Declare Sub      flyline Lib "RTC4ethDLL.DLL" (ByVal encoderdelay As Integer)
Declare Sub      set_duty_cycle_table Lib "RTC4ethDLL.DLL" (ByVal index As Integer, ByVal dutycycle As Integer)
Declare Function n_load_varpolydelay Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal stbfilename As String, ByVal tableno As Integer) As Integer
Declare Function load_varpolydelay Lib "RTC4ethDLL.DLL" (ByVal stbfilename As String, ByVal tableno As Integer) As Integer
Declare Function n_load_program_file Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal name As String) As Integer
Declare Function load_program_file Lib "RTC4ethDLL.DLL" (ByVal name As String) As Integer
Declare Function n_load_correction_file Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal filename As String, ByVal cortable As Integer, ByVal kx As Double, ByVal ky As Double, ByVal phi As Double, ByVal xoffset As Double, ByVal yoffset As Double) As Integer
Declare Function load_correction_file Lib "RTC4ethDLL.DLL" (ByVal filename As String, ByVal cortable As Integer, ByVal kx As Double, ByVal ky As Double, ByVal phi As Double, ByVal xoffset As Double, ByVal yoffset As Double) As Integer
Declare Function n_load_z_table Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal a As Double, ByVal b As Double, ByVal c As Double) As Integer
Declare Function load_z_table Lib "RTC4ethDLL.DLL" (ByVal a As Double, ByVal b As Double, ByVal c As Double) As Integer
Declare Sub      n_list_nop Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      list_nop Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_set_end_of_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      set_end_of_list Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_jump_abs_3d Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer, ByVal z As Integer)
Declare Sub      jump_abs_3d Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer, ByVal z As Integer)
Declare Sub      n_jump_abs Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer)
Declare Sub      jump_abs Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer)
Declare Sub      n_mark_abs_3d Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer, ByVal z As Integer)
Declare Sub      mark_abs_3d Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer, ByVal z As Integer)
Declare Sub      n_mark_abs Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer)
Declare Sub      mark_abs Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer)
Declare Sub      n_jump_rel_3d Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal dz As Integer)
Declare Sub      jump_rel_3d Lib "RTC4ethDLL.DLL" (ByVal dx As Integer, ByVal dy As Integer, ByVal dz As Integer)
Declare Sub      n_jump_rel Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal dx As Integer, ByVal dy As Integer)
Declare Sub      jump_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Integer, ByVal dy As Integer)
Declare Sub      n_mark_rel_3d Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal dz As Integer)
Declare Sub      mark_rel_3d Lib "RTC4ethDLL.DLL" (ByVal dx As Integer, ByVal dy As Integer, ByVal dz As Integer)
Declare Sub      n_mark_rel Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal dx As Integer, ByVal dy As Integer)
Declare Sub      mark_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Integer, ByVal dy As Integer)
Declare Sub      n_write_8bit_port_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      write_8bit_port_list Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_write_da_1_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      write_da_1_list Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_write_da_2_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      write_da_2_list Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_set_matrix_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal i As Integer, ByVal j As Integer, ByVal mij As Double)
Declare Sub      set_matrix_list Lib "RTC4ethDLL.DLL" (ByVal i As Integer, ByVal j As Integer, ByVal mij As Double)
Declare Sub      n_set_offset_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal xoffset As Integer, ByVal yoffset As Integer)
Declare Sub      set_offset_list Lib "RTC4ethDLL.DLL" (ByVal xoffset As Integer, ByVal yoffset As Integer)
Declare Sub      n_set_defocus_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      set_defocus_list Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_set_defocus Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      set_defocus Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_set_softstart_mode Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mode As Integer, ByVal number As Integer, ByVal restartdelay As Integer)
Declare Sub      set_softstart_mode Lib "RTC4ethDLL.DLL" (ByVal mode As Integer, ByVal number As Integer, ByVal resetdelay As Integer)
Declare Sub      n_set_softstart_level Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal index As Integer, ByVal level As Integer)
Declare Sub      set_softstart_level Lib "RTC4ethDLL.DLL" (ByVal index As Integer, ByVal level As Integer)
Declare Sub      n_set_control_mode_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mode As Integer)
Declare Sub      set_control_mode_list Lib "RTC4ethDLL.DLL" (ByVal mode As Integer)
Declare Sub      n_set_control_mode Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mode As Integer)
Declare Sub      set_control_mode Lib "RTC4ethDLL.DLL" (ByVal mode As Integer)
Declare Sub      n_long_delay Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      long_delay Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_laser_on_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal value As Integer)
Declare Sub      laser_on_list Lib "RTC4ethDLL.DLL" (ByVal value As Integer)
Declare Sub      n_set_jump_speed Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal speed As Double)
Declare Sub      set_jump_speed Lib "RTC4ethDLL.DLL" (ByVal speed As Double)
Declare Sub      n_set_mark_speed Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal speed As Double)
Declare Sub      set_mark_speed Lib "RTC4ethDLL.DLL" (ByVal speed As Double)
Declare Sub      n_set_laser_delays Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal ondelay As Integer, ByVal offdelay As Integer)
Declare Sub      set_laser_delays Lib "RTC4ethDLL.DLL" (ByVal ondelay As Integer, ByVal offdelay As Integer)
Declare Sub      n_set_scanner_delays Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal jumpdelay As Integer, ByVal markdelay As Integer, ByVal polydelay As Integer)
Declare Sub      set_scanner_delays Lib "RTC4ethDLL.DLL" (ByVal jumpdelay As Integer, ByVal markdelay As Integer, ByVal polydelay As Integer)
Declare Sub      n_set_list_jump Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal position As Integer)
Declare Sub      set_list_jump Lib "RTC4ethDLL.DLL" (ByVal position As Integer)
Declare Sub      n_set_input_pointer Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal pointer As Integer)
